name:                midymidy-factorio-webservice
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nicball/midymidy-factorio-webservice#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Ballard
maintainer:          znhihgiasy@gmail.com
copyright:           reserved
category:            hobby
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable midymidy-factorio-webservice
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       WebService, Rcon
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai
                     , warp
                     , text
                     , bytestring
                     , utf8-string
                     , stm
                     , binary
                     , network
  default-extensions:  OverloadedStrings
                     , BlockArguments
